--- a/Code/build.gradle
+++ b/Code/build.gradle
@@ -13,14 +13,14 @@ allprojects {
     version = '1.0'
     ext {
         appName = "EpigonProto"
-        squidlibVersion = '4a47af2759'
+        squidlibVersion = '5a0a15c434'
         jacksonVersion = '2.8.6'
         gdxVersion = '1.9.8'
         roboVMVersion = '1.12.0'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
-        aiVersion = '1.8.0'
-        regexodusVersion = '0.1.9'
+        aiVersion = '1.8.1'
+        regexodusVersion = '0.1.10'
     }
 
     repositories {
@@ -43,7 +43,7 @@ project(":core") {
     dependencies {
         compile "com.github.SquidPony.SquidLib:squidlib:$squidlibVersion"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.github.SquidPony.SquidLib:squidlib-extra:$squidlibVersion"
+        //compile "com.github.SquidPony.SquidLib:squidlib-extra:$squidlibVersion"
         ///// implicitly included by dep on squidlib; don't need to explicitly require
         //compile "com.github.tommyettinger:regexodus:$regexodusVersion"
         //compile "com.github.SquidPony.SquidLib:squidlib-util:$squidlibVersion"
